--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -71,3 +71,15 @@
     @apply !shadow-none;
   }
 }
+
+@keyframes float {
+  0% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  50% {
+    transform: translate(100px, 100px) rotate(180deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(360deg);
+  }
+}
